--- a/index.html
+++ b/index.html
@@ -36,7 +36,30 @@
             </div> 
           
         </div>
+        <div class="productive-main">
+            <div>
+            <h2 class="title">Joined Thousands of Productive Users </h2>
+            </div>
 
+            <div class="productive">  
+
+            <div class="user">
+                <h2 class="sub-user">50K</h2>
+                <p class="descrip">Active User</p>
+            </div>
+            <div class="user">
+                <h2 class="sub-user">2M+</h2>
+                <p class="descrip">Focus Sessions</p>
+            </div>
+            <div class="user">
+                <h2 class="sub-user">95%</h2>
+                <p class="descrip"> Satisfaction Rate</p>
+            </div>
+
+        </div>
+
+        </div>
+        
     </main>
     <footer>
 
