--- a/index.html
+++ b/index.html
@@ -57,7 +57,69 @@
             </div>
         </div>
         </div>
+<div class="feedback">
+    <h2 class="feedback-title"> What our users say</h2>
+    <div class="main-feed">
+        <div class="feed-sec">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <h3 class="feed-title">Loved designers</h3>
+        <p class="feed-sub-title">This template instantly 
+            leveled up our presence.” 
+            – Studio Vertex </p>
+            <div class="pic">
+                <img src="Assets/avatar.png" alt="" class="photo">
+                <div class="name">
+                    <h5 class="sub-title1">Reviewer name</h5>
+                    <p class="para">Date</p>
+                </div>
+            </div>
+    </div>
+    <div class="feed-sec">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <h3 class="feed-title">Loved designers</h3>
+        <p class="feed-sub-title">This template instantly 
+            leveled up our presence.” 
+            – Studio Vertex </p>
+            <div class="pic">
+                <img src="Assets/avatar.png" alt="" class="photo">
+                <div class="name">
+                    <h5 class="sub-title1">Reviewer name</h5>
+                    <p class="para">Date</p>
+                </div>
+            </div>
+    </div>
+    <div class="feed-sec">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <img src="Assets/icon-star.png" alt="" class="star">
+        <h3 class="feed-title">Loved designers</h3>
+        <p class="feed-sub-title">This template instantly 
+            leveled up our presence.” 
+            – Studio Vertex </p>
+            <div class="pic">
+                <img src="Assets/avatar.png" alt="" class="photo">
+                <div class="name">
+                    <h5 class="sub-title1">Reviewer name</h5>
+                    <p class="para">Date</p>
+                </div>
+            </div>
+    </div>
 
+    </div>
+    
+    
+
+</div>
 
         <div class="touch">
             <h1 class="headline">Let's Get in Touch</h1>
